# rust-loan-marketplace-builder

./: Cargo.toml  README.md  docker-compose.yml  rust-loan-marketplace-builder.postman_collection.json
db/: init.sql
src/: aggregate.rs  application.rs  commands.rs  db.rs  events.rs  main.rs  queries.rs  routes.rs
tests/: aggregate_tests.rs  application_tests.rs
