[package]
name = "rust-loan-marketplace-builder"
version = "0.1.0"
authors = ["John Gillson <jgillson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = "0.1.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
