[package]
name = "rust-loan-marketplace-builder"
version = "0.1.0"
authors = ["John Gillson <jgillson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = "0.1.0"
postgres-es = "0.1.0"

chrono = "0.4.11"
iron = "0.6.1"
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
router = "*"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"